# ghostcompanion

./: .ai-jail  .env.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pylama.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json.example
.github/workflows/: continuous_delivery.yml  continuous_integration.yml
hooks/: pre-commit  pre-push
scripts/: ci.sh  setup-hooks.sh
src/ghostcompanion/: main.py
src/ghostcompanion/configs/: logging_config.py  settings.py
src/ghostcompanion/core/entity/: account.py  asset.py  cash_balance.py  trade.py  (+1 more)
src/ghostcompanion/repositories/: symbol_mapping.py
src/tastytrade_ghostfolio/: main.py
src/tastytrade_ghostfolio/configs/: settings.py
src/tastytrade_ghostfolio/repositories/: symbol_mapping.py
tests/: conftest.py
tests/e2e/: conftest.py  test_coinbase_cash_balances_e2e.py  test_coinbase_transactions_e2e.py  test_interactive_brokers_cash_balances_e2e.py  test_interactive_brokers_transactions_e2e.py  test_tastytrade_cash_balances_e2e.py  test_tastytrade_transactions_e2e.py
tests/e2e/resources/: coinbase.py  interactive_brokers.py  stubs.py  tastytrade.py
tests/infra/: coinbase_api.py  ghostfolio_api.py  interactive_brokers_api.py  symbol_mapping_repository.py  tastytrade_api.py
tests/resources/: interactive_brokers.py
tests/resources/coinbase/: accounts.py  transactions.py
tests/resources/ghostfolio/: orders.json
tests/resources/interactive_brokers/: ibkr_cash_report.py
tests/resources/tastytrade/: tastytrade_transactions.py
(+48 files in other folders)
